--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "dockerComposeFile": "compose.yml",
+    "dockerComposeFile": "compose.yaml",
     "workspaceFolder": "/work",
     "service": "workspace",
     "customizations": {
